fix: align header items using flexbox

--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,9 @@ header {
     position: sticky;
     top: 0;
     z-index: 2;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 header h1 {
